# StackAttack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  StackAttack.sln  StackAttackGame.cpp  StackAttackGame.sln  StackAttackGame.vcxproj  StackAttackGame.vcxproj.filters
StackAttack/: Block.h  COPYING  Column.h  Hominho.h  Space.h  StackAttack.cpp  StackAttack.rc  StackAttack.vcxproj  StackAttack.vcxproj.filters  packages.config  resource.h  resource1.h
cmake/: FindAllegro5.cmake
include/: Block.h  Game.h  Player.h  Stack.h
resources/images/: LICENSE for background.txt
resources/sounds/: LICENSE.txt
src/: Block.cpp  Player.cpp
